<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Ask Your Senior</string>
    <string name="rupee_symbol">₹</string>
    <string name="transition_of_book_image">book_image_transition</string>

    <!--    app walkthrough -->
    <string name="app_description_page1">"Here to help you to get connected with seniors of your organization"</string>
    <string name="app_title_page2">Collab in Project with seniors</string>
    <string name="app_description_page2">You can be a member of your seniors project by just one click</string>
    <string name="app_title_page3">Buy Old Academics Books Of Your Senior</string>
    <string name="app_description_page3">Worry about buying expensive new books from book store don\'t worry when you can Ask Your Senior</string>

    <!--    login page and Account setting activity-->
    <string name="google_sign_in_instruction">Sign in with google to continue with us</string>
    <string name="username_hint">Username</string>
    <string name="userid_hint">UserId</string>
    <string name="organization_hint">Enter Your Organization</string>
    <string name="linked_id_hint">LinkedIn Id Link</string>
    <string name="github_id_hint">Github Link</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="continue_btn">Continue</string>
    <string name="update_profile_button">Update Profile</string>

    <!--    bottom navigation bar-->
    <string name="homepage">Homepage</string>
    <string name="collab">Collab</string>
    <string name="profile">Profile</string>
    <string name="user_id">User_ID</string>
    <string name="email_id">Email_ID</string>
    <string name="oraganisation_name">Oraganisation_Name</string>
    <string name="user_name">User_Name</string>
    <string name="todo">TODO</string>
    <string name="my_projects">My Projects</string>
    <string name="todo1">TODO</string>
    <string name="account_settings">Account Settings</string>
    <string name="my_orders">My Orders</string>
    <string name="logout">Logout</string>
    <string name="account_settings1">Account Settings</string>

    <!--    homepage fragment i.e book page-->
    <string name="no_data">NO Data Found</string>
    <string name="add_button">Add</string>
    <string name="book_name_edittext_hint">Book Name</string>
    <string name="publication_edittext_hint">Publication</string>
    <string name="book_branch_edittext_hint">Branch</string>
    <string name="book_semester_edittext_hint">Semester</string>
    <string name="book_price">Price</string>
    <string name="description_edittext_hint">Desription</string>
    <string name="contact_number_edittext_hint">Contact Number</string>


    <!--    application info-->
    <string name="application_info_description1">Hello This App is developed to encourage the culture of collaborative programming and development which helps students to connect with their seniors.</string>
    <string name="application_info_description2">
        If you are a student and learning to develop Android development you are welcome to contribute us in our project</string>

    <!--        activity detailed description of selected book-->
    <string name="book_detailed_description_whatsapp_button_name">Whatsapp</string>

<!--    activity account settings-->



    <!--    Collab page-->
    <string name="add_new_button">ADD NEW</string>
    <string name="collab_projectname">PROJECT NAME</string>
    <string name="collab_description">COLLAB DESCRIPTION</string>
    <string name="by_username">By "USERNAME"</string>

    <!--   Project Details-->
    <string name="pdadd">Add Project Name Here</string>
    <string name="Project_name">Project Name</string>
    <string name="pd">Add Project Description Here</string>
    <string name="add_cd">ADD Contact Details </string>
    <string name="eligibility">Eligibilities/Technologies To Have Knowledge About</string>
    <string name="pn">Add Project Name </string>
    <string name="ad">ADD </string>
    <string name="prodhead">Project Details </string>
    <string name="prodeshint">Add Project Description Here </string>
    <string name="pronamehint">Project Name </string>
    <string name="linkedin">Link of your LinkedIn ID </string>
    <string name="email">Link of your email address </string>
    <string name="github">Link of your GitHub ID </string>
    <string name="phone">Enter your Phone Number </string>
    <string name="whatsapp">Enter your Phone Number  </string>
</resources>