<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="userDetails"
            type="com.example.askyoursenior.model.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".fragments.profilepackage.AccountSettingsActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/update_profile_button">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Account Settings"
                android:textAlignment="center"
                android:fontFamily="@font/baloo_bhai"
                android:textSize="40sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userid_edittextlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:hint="@string/userid_hint"
                android:elevation="4dp"
                app:endIconDrawable="@drawable/ic_baseline_account_circle_24"
                app:endIconTint="@color/lightblue"
                app:endIconMode="custom"
                android:layout_margin="15dp">
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/userid_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="@={userDetails.username}"
                    android:enabled="false"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_edittextlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:hint="@string/username_hint"
                android:elevation="4dp"
                app:endIconDrawable="@drawable/ic_baseline_account_circle_24"
                app:endIconTint="@color/lightblue"
                app:endIconMode="custom"
                android:layout_margin="15dp">
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/username_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="@={userDetails.name}"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/organization_name_edittextlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:hint="@string/organization_hint"
                android:elevation="4dp"
                app:endIconDrawable="@drawable/ic_baseline_account_balance_24"
                app:endIconTint="@color/lightblue"
                app:endIconMode="custom"
                android:layout_margin="15dp">
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/organization_name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:singleLine="true"
                    android:text="@={userDetails.organisationname}"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/github_id_edittextlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:hint="@string/github_id_hint"
                android:elevation="4dp"
                app:endIconDrawable="@drawable/github_icon"
                app:endIconTint="@null"
                app:endIconMode="custom"
                android:layout_margin="15dp">
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/github_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/linkedin_edittextlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:hint="@string/linked_id_hint"
                android:elevation="4dp"
                app:endIconDrawable="@drawable/linkedin"
                app:endIconTint="@null"
                app:endIconMode="custom"
                android:layout_margin="15dp">
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/linkedin_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_number_edittextlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:hint="@string/phone_number_hint"
                app:endIconDrawable="@drawable/whatsapp_icon"
                app:endIconTint="@null"
                android:elevation="4dp"
                app:endIconMode="custom"
                android:layout_margin="15dp">
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/phone_number_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="phone"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/update_profile_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/update_profile_button"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>