<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.bookfragment.AddBook">

        <ImageView
            android:id="@+id/add_image_of_book"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_baseline_add_a_photo_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/guideline40"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/book_name_edittextlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:hint="@string/book_name_edittext_hint"
            android:elevation="4dp"
            app:endIconMode="none"
            android:layout_margin="15dp"
            app:layout_constraintTop_toBottomOf="@id/add_image_of_book"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/book_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/publication_name_textinputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:hint="@string/publication_edittext_hint"
            android:elevation="4dp"
            app:endIconMode="none"
            android:layout_margin="15dp"
            app:layout_constraintTop_toBottomOf="@id/book_name_edittextlayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/publication_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/book_description_textinputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:hint="@string/description_edittext_hint"
            android:elevation="4dp"
            app:endIconMode="none"
            android:layout_margin="15dp"
            app:layout_constraintTop_toBottomOf="@id/publication_name_textinputlayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/book_description_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/add_button"
            app:layout_constraintTop_toBottomOf="@+id/book_description_textinputlayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>






    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>